--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+12133522795" class="contact-link">+63931-9185-301</a>
+              <a href="tel:+63931-9185-301" class="contact-link">+63931-9185-301</a>
             </div>
 
           </li>
