--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="amantemaikho@gmail.com" class="contact-link">amantemaikho@gmail.com</a>
+              <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=ASKXGp1iJUQJqV5XS-QlNww3uR81JwN0KZgNivWuwTwQGY7zPcL87K6smjCDb68vJHyubXUdItT3&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-955448171%3A1706015761128348&theme=glif" class="contact-link">amantemaikho@gmail.com</a>
             </div>
 
           </li>
