--- a/index.html
+++ b/index.html
@@ -113,10 +113,9 @@
               <ion-icon name="location-outline"></ion-icon>
             </div>
 
-            <div class="contact-info">
+           <div class="contact-info">
               <p class="contact-title">Location</p>
-
-              <address>Masbate City, Phillipines</address>
+              <a href="https://maps.app.goo.gl/2dXPkJt3xBrV8eTC6" class="contact-link">Masbate City</a>
             </div>
 
           </li>
