--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=ASKXGp1iJUQJqV5XS-QlNww3uR81JwN0KZgNivWuwTwQGY7zPcL87K6smjCDb68vJHyubXUdItT3&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-955448171%3A1706015761128348&theme=glif" class="contact-link">amantemaikho@gmail.com</a>
+              <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=ASKXGp1iJUQJqV5XS-QlNww3uR81JwN0KZgNivWuwTwQGY7zPcL87K6smjCDb68vJHyubXUdItT3&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-955448171%3A1706015761128348&theme=glif" class="contact-link" target="_blank">amantemaikho@gmail.com</a>
             </div>
 
           </li>
@@ -93,7 +93,7 @@
 
           </li>
 
-          <li class="contact-item">
+          <li class="contact-item">  
 
             <div class="icon-box">
               <ion-icon name="calendar-outline"></ion-icon>
@@ -113,10 +113,11 @@
               <ion-icon name="location-outline"></ion-icon>
             </div>
 
-           <div class="contact-info">
+            <div class="contact-info">
               <p class="contact-title">Location</p>
-              <a href="https://maps.app.goo.gl/2dXPkJt3xBrV8eTC6" class="contact-link">Masbate City</a>
-            </div>
+              <a href="https://maps.app.goo.gl/2dXPkJt3xBrV8eTC6" class="contact-link" target="_blank">Masbate City</a>
+          </div>
+          
 
           </li>
 
@@ -127,20 +128,20 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.facebook.com/maikhoamante" class="social-link">
+            <a href="https://www.facebook.com/maikhoamante" class="social-link" target="_blank">
                 <ion-icon name="logo-facebook"></ion-icon>
             </a>
         </li>
         
 
           <li class="social-item">
-            <a href="https://twitter.com/AmanteMaikho" class="social-link">
+            <a href="https://twitter.com/AmanteMaikho" class="social-link" target="_blank">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.instagram.com/maik_0027/" class="social-link">
+            <a href="https://www.instagram.com/" class="social-link" target="_blank">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
